Fixed display of Location Types page (removed the wrapping 'adWrapper' div in the markup and CSS)
git-tfs-force:No Work Item
git-tfs-id: [http://tfs.etg-inc.net:8080/tfs/Engage%20TFS%202010]$/Engage Locator;C619

--- a/module.css
+++ b/module.css
@@ -850,7 +850,6 @@ Attribute Definition (Custom Attribute) Page
 	cursor: default;
 }
 
-.adWrapper{}
 .locatorInstruction
 {
 	text-align: left;
